--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,4 +1,4 @@
-<nav class="bg-gray-800">
+<nav class="bg-white border-b border-solid border-b-slate-600">
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
     <div class="relative flex h-16 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -41,7 +41,7 @@
                   {% if link.links[0].links != blank %}<div class="flex gap-x-3">{% endif %}
                     {%- for childlink in link.links -%}
                       {%- if childlink.links == blank -%}
-                        <a href="{{ childlink.url }}" class="block bg-gray-900 text-gray-300 rounded-md px-3 py-1 text-sm" {% if childlink.current %} aria-current="page"{% endif %}>
+                        <a href="{{ childlink.url }}" class="block  text-primary  px-3 py-1 text-sm" {% if childlink.current %} aria-current="page"{% endif %}>
                           {{ childlink.title | escape }}
                         </a>
                       {%- else -%}
@@ -56,7 +56,7 @@
                           </div>
                           <div class="">
                             {%- for grandchildlink in childlink.links -%}
-                              <a href="{{ grandchildlink.url }}" class="whitespace-nowrap block bg-gray-900 text-gray-300 rounded-md px-3 py-1 text-sm"{% if grandchildlink.current %} aria-current="page"{% endif %}>
+                              <a href="{{ grandchildlink.url }}" class="whitespace-nowrap block  text-primary px-3 py-1 text-sm"{% if grandchildlink.current %} aria-current="page"{% endif %}>
                                 {{ grandchildlink.title | escape }}
                               </a>
                             {%- endfor -%}
@@ -67,7 +67,7 @@
                   {% if link.links[0].links != blank %}</div>{% endif %}
                 </div>
                 {%- else -%}
-                  <a href="{{ link.url }}" class="whitespace-nowrap bg-gray-900 text-gray-300 rounded-md px-3 py-2 text-sm font-medium " {% if link.current %} aria-current="page"{% endif %}>
+                  <a href="{{ link.url }}" class="whitespace-nowrap text-primary px-3 py-2 text-sm font-medium " {% if link.current %} aria-current="page"{% endif %}>
                     {{ link.title | escape }}
                   </a>
                 {%- endif -%}
@@ -78,7 +78,7 @@
       </div>
       <div class="inset-y-0 right-0 flex items-center pr-2 sm:inset-auto sm:ml-6 sm:pr-0">
 
-        <button type="button" class="ml-1 rounded-full bg-gray-800 p-1 text-gray-400  focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
+        <button type="button" class="ml-1 rounded-full p-1 text-gray-400  focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
           <span class="sr-only">Get Help</span>  
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" class="h-6 w-6"  viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
@@ -106,7 +106,7 @@
       x-on:keydown.escape.prevent.stop="close($refs.button)"
       @focusin.window="! $refs.panel.contains($event.target) && close()"
       x-id="['search-panel']">
-          <button type="button" class="ml-1 rounded-full bg-gray-800 p-1 text-gray-400  focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" 
+          <button type="button" class="ml-1 rounded-full  p-1 text-gray  focus:outline-none" 
           x-ref="button"
           x-on:click="toggle()"
           :aria-expanded="open"
@@ -221,14 +221,14 @@
         </div>
         </div>
 
-        <button type="button" class="ml-1 rounded-full bg-gray-800 p-1 text-gray-400  focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
+        <button type="button" class="ml-1 rounded-full text-grey p-1 text-gray  focus:outline-none">
           <span class="sr-only">View Saved Items</span>  
           <svg xmlns="http://www.w3.org/2000/svg"  class="h-6 w-6"  fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
           </svg>
         </button>
 
-        <a href="{{ routes.cart_url }}" id="cart-icon-bubble" type="button" class="ml-1 rounded-full bg-gray-800 p-1 text-gray-400  focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
+        <a href="{{ routes.cart_url }}" id="cart-icon-bubble" type="button" class="ml-1 rounded-full text-grey p-1  focus:outline-none">
           <span class="sr-only">{{ 'templates.cart.cart' | t }}</span>
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
@@ -236,9 +236,9 @@
           {%- if cart != empty -%}
             <div class="cart-count-bubble">
               {%- if cart.item_count < 100 -%}
-                <span aria-hidden="true">{{ cart.item_count }}</span>
+                <span aria-hidden="true" class="sr-only">{{ cart.item_count }}</span>
               {%- endif -%}
-              <span class="visually-hidden">{{ 'sections.header.cart_count' | t: count: cart.item_count }}</span>
+              <span class="sr-only">{{ 'sections.header.cart_count' | t: count: cart.item_count }}</span>
             </div>
           {%- endif -%}
         </a>
@@ -275,7 +275,7 @@
             <div >
               <button 
               type="button" 
-              class="flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" aria-expanded="false" aria-haspopup="true"
+              class="flex rounded-full text-grey p-1 text-sm focus:outline-none 0" aria-expanded="false" aria-haspopup="true"
               x-ref="button"
               x-on:click="toggle()"
               :aria-expanded="open"
