--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,7 @@
 :root {
     --color-primary: 0 0 0;
     --color-secondary: 0 0 0;
+    --color-notification:red;
 }
 @tailwind base;
 @tailwind components;
